small improvements to faq

--- a/main/templates/faq.html
+++ b/main/templates/faq.html
@@ -19,7 +19,7 @@
 		(StackOverflow and Rentacoder are trademarks of their respective owners.)</p>
 
 		<h1>What if I don’t like the answers I get?</h1>
-		<p>Don’t worry. If you aren’t completely satisfied, we’ll refund your money with no questions asked. If you aren’t happy, we aren’t happy. Also, you might want to check out Tips on How to Get Your Question Answered.</p>
+		<p>Don’t worry. If you aren’t completely satisfied, we’ll refund your money with no questions asked. If you aren’t happy, we aren’t happy.</p>
 
 		<h1>How do I get my money? or What forms of payment do you accept?</h1>
 		<p>code4cheap.com uses Amazon Payments. If you have (or create) a regular Amazon.com account, you can send and receive payments with us. Amazon Payments accepts most major credit cards and bank debits.</p>
@@ -48,7 +48,7 @@
 
 		<h1>Is there a reputation system?</h1>
 		<p>Not yet.</p>
-
+		
 		<h1>Can I ask a question but keep the answers private?</h1>
 		<p>Not yet. This is an often-requested feature, but there are only so many features we can add at any given moment. If you’re interested in posting a private question, though, let us know. If enough people are interested, we’ll make this higher on our list of priorities.</p>
 
