improved styling for markdown formatted text

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -92,6 +92,7 @@
 		</div>
 		<div id="footer">
 			<a href="/faq">FAQ</a> &nbsp; 
+			<a href="/tos">Terms of Service</a> &nbsp; 
 			<a href="http://code4cheap.tumblr.com/">Blog</a> &nbsp; 
 			<a href="http://twitter.com/code4cheap">Twitter</a> &nbsp; 
 			<a href="http://www.facebook.com/pages/Code4cheap/201874853171539">Facebook</a> &nbsp; 
