--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,11 +1,14 @@
 /* styles that are global across c4c */
 a { color: #1f4db0; }
 a:visited { color: #74645b; }
+blockquote { margin-left: 4em; }
 body {
 	background-color: #f1f0ec;
 	font-family: Trebuchet, sans-serif;
 	line-height: 1.25em;
 }
+em { font-style: italic; }
+strong { font-weight: bold; }
 textarea {
 	-webkit-border-radius: 7px;
 	-moz-box-shadow: 0 0 5px #888;
