removed empty line between Your Question: and formatting help

--- a/main/templates/formatHelp.html
+++ b/main/templates/formatHelp.html
@@ -1,5 +1,5 @@
 <style>div#formatGuide p { margin: 0; }</style>
-<p style="text-align: right;"><span id="formatCue">formatting help &#9662;</span></p>
+<span id="formatCue" style="float: right;">formatting help &#9662;</span>
 <div id="formatGuide" class="shadowBox" style="background-color: white; border: 4px solid #ddd; display: none; position: absolute; text-align: left;">
 	<b>Text</b>
 	<p>_<i>italic</i>_</p>
