removed trademark text about SO and RaC

--- a/main/templates/faq.html
+++ b/main/templates/faq.html
@@ -15,8 +15,7 @@
 		<h1>Why should I use code4cheap.com instead of StackOverflow or Rentacoder?</h1>
 		<p>code4cheap.com is for problems that fall in between StackOverflow and Rentacoder. Sometimes you have a question so complicated that nobody on StackOverflow wants to answer it for free. But maybe your problem would really only take someone a couple hours -- not worth the overhead of using Rentacoder for such a small problem.</p>
 
-		<p>And that’s when you should use code4cheap.com: when you need some code that’s too big for StackOverflow and too small for Rentacoder.
-		(StackOverflow and Rentacoder are trademarks of their respective owners.)</p>
+		<p>And that’s when you should use code4cheap.com: when you need some code that’s too big for StackOverflow and too small for Rentacoder.</p>
 
 		<h1>What if I don’t like the answers I get?</h1>
 		<p>Don’t worry. If you aren’t completely satisfied, we’ll refund your money with no questions asked. If you aren’t happy, we aren’t happy.</p>
