--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -139,7 +139,7 @@
 			<div id="answererTeaser">
 				<p>Get <span style="color: #f79939; font-weight: bold;">${{ question.price }}</span> for posting the best answer!*</p>
 				<p><a href="#" class="ask"></a></p>
-				<p style="font-size: 50%;">*minus <a href="/faq#fees">service fee</a></p>
+				<p style="font-size: 50%;">*minus <a href="/faq#howMuchDoIGet">service fee</a></p>
 			</div>
 			<script>
 				$('div#answererTeaser a.ask').click(function(event) {
