--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -98,5 +98,17 @@
 			<a href="http://www.facebook.com/pages/Code4cheap/201874853171539">Facebook</a> &nbsp; 
 			<a href="mailto:code4cheap@gmail.com">Contact</a>
 		</div>
+		<!-- Google Analytics -->
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-22550692-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 	</body>
 </html>
