added image and markdown link to formatting help

--- a/main/templates/formatHelp.html
+++ b/main/templates/formatHelp.html
@@ -16,6 +16,10 @@
 	<p>&lt;http://foo.com&gt;</p>
 	<p>[foo](http://foo.com)</p>
 	<p>&lt;a href="http://foo.com"&gt;foo&lt;/a&gt;</p>
+	<br>
+	<p>![Image Alt text](/path/to/image.jpg)</p>
+	<br>
+	<p style="text-align:center;"><a href="http://daringfireball.net/projects/markdown/syntax">guide to markdown syntax</a></p>
 </div>
 <script>
 	$('span#formatCue').hover(function() {
