fixed up transactional emails, added test page to view all emails

--- a/main/templates/email/answererAccepted.html
+++ b/main/templates/email/answererAccepted.html
@@ -1,1 +1,9 @@
-Your answer was accepted. get money. get paid.
+<p>Good news, everyone!</p>
+<br>
+<p>{{ questioner.username }} has selected your answer on code4cheap.com! <a href="{{ url }}">You can see it here</a></p>
+<br>
+<p>You will receive payment in less than 48 hours.</p>
+<br>
+<p>Nice job!</p>
+<br>
+<p>Blake Householder and the code4cheap.com team</p>
