--- a/main/templates/email/answererSignup.html
+++ b/main/templates/email/answererSignup.html
@@ -1,4 +1,12 @@
-Thanks for signing up with code4cheap!<br>
-Your email is {{ email }} and your password is {{ password }}<br>
-You will need to activate your account before your answer becomes public.<br>
-<a href="{{ activateUrl }}">Click here to activate your account</a>
+<p>Hi!</p>
+<br>
+<p>You just signed up for code4cheap.com. Good job!</p>
+<br>
+<p><a href="{{ activateUrl }}">Confirm your email</a> or if that doesn't work, visit this link: {{ activateUrl }}</p>
+<br>
+<p><b>You will need to activate your account before your answer becomes public.</b></p>
+<br>
+<p>Your password is: {{ password }}</p>
+<br>
+<p>Thanks,</p>
+<p>Blake Householder and the code4cheap.com team</p>
