--- a/main/templates/email/questionerSignup.html
+++ b/main/templates/email/questionerSignup.html
@@ -1,3 +1,10 @@
-Thanks for signing up with code4cheap!<br>
-Your password is {{ password }}<br>
-<a href="{{ activateUrl }}">Click here to activate your account</a>
+<p>Hi!</p>
+<br>
+<p>You just signed up for code4cheap.com. Good job!</p>
+<br>
+<p><a href="{{ activateUrl }}">Confirm your email address</a> or if that doesn't work, visit this link: {{ activateUrl }}</p>
+<br>
+<p>Your password is: {{ password }}</p>
+<br>
+<p>Thanks,</p>
+<p>Blake Householder and the code4cheap.com team</p>
