--- a/main/templates/email/questionerThanks.html
+++ b/main/templates/email/questionerThanks.html
@@ -1,1 +1,10 @@
-Thanks for ordering your question/sandwich from code4cheap.com!
+<p>Hi!</p>
+<br>
+<p>You posted a question at code4cheap.com. Thanks for your business!</p>
+<br>
+<p><a href="{{ url }}">View your question</a></p>
+<br>
+<p>We'll send you an email when someone posts an answer.</p>
+<br>
+<p>Thanks,</p>
+<p>Blake Householder and the code4cheap.com team</p>
