--- a/main/templates/formatHelp.html
+++ b/main/templates/formatHelp.html
@@ -1,18 +1,18 @@
-<style>div#formatGuide p { margin: 0; }</style>
+<style>div#formatGuide p { margin: 0; padding: 0 1em; }</style>
 <span id="formatCue" style="float: right;">formatting help &#9662;</span>
 <div id="formatGuide" class="shadowBox" style="background-color: white; border: 4px solid #ddd; display: none; position: absolute; text-align: left;">
-	<b>Text</b>
+	<p><b>Text</b></p>
 	<p>_<i>italic</i>_</p>
 	<p>**<b>bold</b>**</p>
 	<p>quote by placing &gt; at start of line</p>
 	<p>backtick escapes `<code>like _so_</code>`</p>
 	<br>
-	<b>Spacing</b>
+	<p><b>Spacing</b></p>
 	<p>Indent code with four spaces</p>
 	<p>Put returns between paragraphs</p>
 	<p>For linebreak add two spaces at the end</p>
 	<br>
-	<b>Links</b>
+	<p><b>Links</b></p>
 	<p>&lt;http://foo.com&gt;</p>
 	<p>[foo](http://foo.com)</p>
 	<p>&lt;a href="http://foo.com"&gt;foo&lt;/a&gt;</p>
