cleaned up html emails a little bit

--- a/main/templates/email/answererAccepted.html
+++ b/main/templates/email/answererAccepted.html
@@ -1,9 +1,7 @@
 <p>Good news, everyone!</p>
-<br>
 <p>{{ questioner.username }} has selected your answer on code4cheap.com! <a href="{{ url }}">You can see it here</a></p>
-<br>
 <p>You will receive payment in less than 48 hours.</p>
-<br>
 <p>Nice job!</p>
 <br>
+<p>Thanks!</p>
 <p>Blake Householder and the code4cheap.com team</p>
