centered body to help ie

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,7 +9,7 @@
 		<style>div#shadowSeparator { background-image:url({{ MEDIA_URL }}images/shadow.png); }</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 	</head>
-	<body>
+	<body style="text-align: center;">
 		<div id="header">
 			<table style="width: 100%;"><tr>
 			<td width="33.3%"></td>
